# ParaGateway

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md
docs/: design.md  unigateway_optimization.md  why.md
migrations/: 20260513000000_initial_schema.sql
scripts/: start.sh
src/: lib.rs  main.rs
src/api/: admin.rs  mod.rs  models.rs  proxy.rs  stats_handler.rs
src/auth/: admin.rs  mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/routing/: mod.rs
src/server/: mod.rs
src/sync/: mod.rs
src/usage/: mod.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx
web/src/components/: Select.tsx
web/src/pages/: PoolDetails.tsx  Pools.tsx  Providers.tsx
web/src/pages/access/: AccessControl.tsx
web/src/pages/stats/: Statistics.tsx
